--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -1,4 +1,4 @@
-# 01 单项选择题 24'
+# 01 单项选择题 26‘ = 22' + 4’
 
 
 
@@ -125,9 +125,9 @@
 
 
 
-## 02 组成原理 2’ = 2‘ × 1
+## 02 组成原理 4’ = 2‘ × 2
 
-- [x] 01 T12 2‘  [01 单选12 2‘ 定点整数的类型转换](01 刷题\01 单项选择题 80' = 2'  × 40\02 组成原理\01 单选12 2‘ 定点整数的类型转换) 
+- [x] 01 T12 2‘   [01 单选12 2‘ 定点整数的类型转换](01 刷题\01 单项选择题 80' = 22‘ + 4’\02 组成原理 4’ = 2‘ × 2\01 单选12 2‘ 定点整数的类型转换) 
 
   - [x] 考察：定点整数的类型转换
 
@@ -139,9 +139,9 @@
       - [x] 05 求补操作
     - [x] 02 刷题
 
-- [ ] 12 T12 2‘ 
+- [ ] 12 T12 2‘  [02 单选 13 2‘ 程序的执行过程 计算机分层的结构](01 刷题\01 单项选择题 80' = 22‘ + 4’\02 组成原理 4’ = 2‘ × 2\02 单选 13 2‘ 程序的执行过程 计算机分层的结构) 
 
-  - [ ] 考察：
+  - [ ] 考察：程序的执行过程 计算机分层的结构
 
   
 
