--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -142,7 +142,10 @@
 - [ ] 12 T12 2‘   [02 单选 13 2‘ 程序的执行过程 计算机分层的结构](01 刷题\01 单项选择题 80' = 22‘ + 4’\02 组成原理 4’ = 2‘ × 2\02 单选 13 2‘ 程序的执行过程 计算机分层的结构) 
 
   - [ ] 考察：程序的执行过程 计算机分层的结构
-
+    - [ ] 01 知识点
+    - [ ] 02 刷题
+  
+  
   
 
 
