--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -139,13 +139,22 @@
       - [x] 05 求补操作
     - [x] 02 刷题
 
-- [ ] 12 T12 2‘   [02 单选 13 2‘ 程序的执行过程 计算机分层的结构](01 刷题\01 单项选择题 80' = 22‘ + 4’\02 组成原理 4’ = 2‘ × 2\02 单选 13 2‘ 程序的执行过程 计算机分层的结构) 
+- [ ] 02 T13 2‘   [02 单选 13 2‘ 程序的执行过程 计算机分层的结构](01 刷题\01 单项选择题 80' = 22‘ + 4’\02 组成原理 4’ = 2‘ × 2\02 单选 13 2‘ 程序的执行过程 计算机分层的结构) 
 
   - [ ] 考察：程序的执行过程 计算机分层的结构
     - [ ] 01 知识点
     - [ ] 02 刷题
-  
-  
+
+- [ ] 03 T14 2'  [03 单选 14 2‘ 范围 (可表示)连续整数范围](01 刷题\01 单项选择题 28' = 22‘ + 6’\02 组成原理 6’ = 2‘ × 3\03 单选 14 2‘ 范围 (可表示)连续整数范围) 
+
+  - [ ] 考察：范围  (可表示)连续整数范围
+    - [ ] 01 知识点
+      - [ ] 01 2个重要概念 范围 (可表示)连续整数范围
+      - [ ] 
+
+    - [ ] 02 刷题
+
+
   
 
 
