--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -153,6 +153,8 @@
       - [x] 02 定点数类型 浮点数类型 范围（可表示）连续整数范围
       - [x] 03 浮点数类型 范围 (可表示)连续整数范围 计算
       - [x] 04 float类型 范围 计算
+      - [x] 05 float类型 (可表示)连续整数范围 计算
+      - [ ] 06 float类型 (可表示)连续整数范围
       
     - [ ] 02 刷题
 
