--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -149,12 +149,7 @@
 
   - [x] 考察：范围  (可表示)连续整数范围
     - [x] 01 知识点
-      - [x] 01 2个重要概念 范围 (可表示)连续整数范围
-      - [x] 02 定点数类型 浮点数类型 范围（可表示）连续整数范围
-      - [x] 03 浮点数类型 范围 (可表示)连续整数范围 计算
-      - [x] 04 float类型 范围 计算
-      - [x] 05 float类型 (可表示)连续整数范围 计算
-      - [ ] 06 float类型 (可表示)连续整数范围
+      - [ ] <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503151445834.png" alt="image-20250315144515735" style="zoom: 33%;" />
       
     - [ ] 02 刷题
 
