--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -145,13 +145,17 @@
     - [x] 01 知识点
     - [x] 02 刷题
 
-- [x] 03 T14 2'  [03 单选 14 2‘ 范围 (可表示)连续整数范围](01 刷题\01 单项选择题 28' = 22‘ + 6’\02 组成原理 6’ = 2‘ × 3\03 单选 14 2‘ 范围 (可表示)连续整数范围) 
+- [x] 03 T14 2'   [03 单选 14 2‘ 范围 (可表示)连续整数范围](01 刷题\01 单项选择题 28' = 22‘ + 6’\02 组成原理 6’ = 2‘ × 3\03 单选 14 2‘ 范围 (可表示)连续整数范围) 
 
-  - [x] 考察：范围  (可表示)连续整数范围
-    - [x] 01 知识点
-      - [ ] <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503151445834.png" alt="image-20250315144515735" style="zoom: 33%;" />
-      
-    - [ ] 02 刷题
+  * 250315 D283
+  
+  * 01 考察：范围  (可表示)连续整数范围
+  
+  * 02 知识点
+    - [ ] <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503151545929.png" alt="image-20250315154527818" style="zoom:50%;" />
+  
+  
+  * 03 刷题
 
 
 
