--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -147,12 +147,12 @@
 
 - [x] 03 T14 2'   [03 单选 14 2‘ 范围 (可表示)连续整数范围](01 刷题\01 单项选择题 28' = 22‘ + 6’\02 组成原理 6’ = 2‘ × 3\03 单选 14 2‘ 范围 (可表示)连续整数范围)  
 
-  * D：250319 D279 - 
+  * D4：250319 D279 - 250322 D276
   
   * 01 考察：范围  (可表示)连续整数范围
   
   * 02 知识点
-    - [ ] <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503191437316.png" alt="image-20250319143653151" style="zoom:50%;" />
+    - [x] <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503221052701.png" alt="image-20250322105211633" style="zoom:50%;" />
   
   
   * 03 刷题
@@ -171,7 +171,5 @@
 # 02 综合应用题 22'
 
 - [ ] 01 T41 13' [01 41 13‘ 拓扑排序](01 刷题\02 综合应用题\01 41 13‘ 拓扑排序) 
-  - [ ] 
-    - [ ] 
 - [x] 07 T47 9' [07 47 9’ BGP的路由选择协议](01 刷题\02 综合应用题\07 47 9’ BGP的路由选择协议) 
 
