--- a/01 初试/01 408真题/01 24408/03 复习进度.md
+++ b/01 初试/01 408真题/01 24408/03 复习进度.md
@@ -1,4 +1,4 @@
 # 24408真题 D4：250319 D279 -
 
-- [ ] 01 T14 2'：D4：250319 D279 - 250322 D276
-- [ ] 02 复习T1-T14 28'：D
+- [x] 01 T14 2'：D6：250319 D279 - 250324 D274 M
+- [ ] 02 复习T1-T14 28' D1：250324 D274 M - 
