--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -129,7 +129,7 @@
 
 
 
-## 02 组成原理 4’ = 2‘ × 2
+## 02 组成原理 6’ = 2‘ × 3
 
 - [x] 01 T12 2‘   [01 单选12 2‘ 定点整数的类型转换](01 刷题\01 单项选择题 80' = 22‘ + 4’\02 组成原理 4’ = 2‘ × 2\01 单选12 2‘ 定点整数的类型转换) 
 
@@ -151,17 +151,17 @@
 
 - [x] 03 T14 2'   [03 单选 14 2‘ 范围 (可表示)连续整数范围](01 刷题\01 单项选择题 28' = 22‘ + 6’\02 组成原理 6’ = 2‘ × 3\03 单选 14 2‘ 范围 (可表示)连续整数范围)  
 
-  * D4：250319 D279 - 250322 D276
+  - [x] 
   
-  * 01 考察：范围  (可表示)连续整数范围
+  - [x] 01 考察：范围  (可表示)连续整数范围
   
-  * 02 知识点
-    - [x] <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503221052701.png" alt="image-20250322105211633" style="zoom:50%;" />
+  - [x] 02 知识点
+  
+    <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/202503221052701.png" alt="image-20250322105211633" style="zoom:50%;" />
   
   
-  * 03 刷题
+  - [x] 03 刷题
   
-    - [ ] 
 
 
 
