--- a/01 初试/01 408真题/01 24408/03 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/03 试卷分析.md
@@ -139,7 +139,7 @@
     - [x] 01 知识点
       - [x] 01 机器数
       - [x] 02 真值
-      - [x] 03 定点整数的不同类型转换（考虑机器数）
+      - [ ] 03 定点整数的不同类型转换（考虑机器数）
       - [x] 04 重要数值
       - [x] 05 求补操作
     - [x] 02 刷题
