--- a/01 初试/01 408真题/01 24408/03 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/03 试卷分析.md
@@ -4,29 +4,36 @@
 
 ## 01 数据结构 22’ = 2‘ × 11
 
-- [x] 01 T1 2‘  [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题 28' = 22‘ + 6’\01 数据结构 22’ = 2‘ × 11\01 单选1 2' 一段语句序列对链表的影响) 
-  - [x] 时间：250326 D268
+- [x] 01 T1 2‘    [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题 28' = 22‘ + 6’\01 数据结构 22’ = 2‘ × 11\01 单选1 2' 一段语句序列对链表的影响) 
+  - [x] 01 时间：250330 D268 S
+  - [x] 02 考察：一段语句序列对链表的影响
+  - [x] 03 刷题
   
 - [x] 02 T2 2’  [02 单选2 2’ 中缀表达式转后缀表达式](01 刷题\01 单项选择题 28' = 22‘ + 6’\01 数据结构 22’ = 2‘ × 11\02 单选2 2’ 中缀表达式转后缀表达式) 
-  - [ ] 250324 D274 M
-  - [x] 考察：中缀转后缀表达式
-    - [x] 01 知识点：中缀转后缀表达式 2种方法
-      - [x] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
-      - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
-    - [x] 02 刷题
+  - [x] 01 时间：250330 D268 S
+  - [x] 02 考察：中缀转后缀表达式
+  - [x] 03 知识点：中缀转后缀表达式 2种方法
+    - [x] 01 中缀转后缀表达式 方法1 中缀转后缀模拟
+    - [x] 02 中缀转后缀表达式 方法2 求出表达式树
+  - [x] 04 刷题
+    - [x] 01 中缀转后缀表达式 方法1 中缀转后缀模拟
+    - [x] 02 中缀转后缀表达式 方法2 求出表达式树
+  
+- [x] 03 T3 2'  [03 单选3 2’ 二叉树 中序遍历序列](01 刷题\01 单项选择题 28' = 22‘ + 6’\01 数据结构 22’ = 2‘ × 11\03 单选3 2’ 二叉树 中序遍历序列) 
 
-- [x] 03 T3 2'  [03 单选3 2’ 二叉树 中序遍历序列](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\03 单选3 2’ 二叉树 中序遍历序列) 
+  - [x] 01 时间：250330 D268 S
 
-  - [x] 考察：二叉树 中序遍历序列
-    - [x] 01 知识点
-      - [x] 01 得到 二叉树 中序遍历序列 的2种方法
-        - [x] 01 得到 二叉树 中序遍历序列 的方法1 常规法
-        - [x] 02 得到 二叉树 中序遍历序列 的方法2 拍平法
-          - [x] 01 拍平法 应用1 拍平法 在二叉排序树中 的应用
-          - [x] 02 拍平法 应用2 拍平法 在B树中 的应用
-    - [x] 02 刷题
-      - [x] 01 方法1：常规法
-      - [x] 02 方法2：拍平法
+  - [x] 02 考察：二叉树 中序遍历序列
+  - [x] 03 知识点
+    - [x] 01 得到 二叉树 中序遍历序列 的2种方法
+      - [x] 01 得到 二叉树 中序遍历序列 的方法1 常规法
+      - [x] 02 得到 二叉树 中序遍历序列 的方法2 拍平法
+        - [ ] 01 拍平法 应用1 拍平法 在二叉排序树中 的应用
+        - [x] 02 拍平法 应用2 拍平法 在B树中 的应用
+  - [ ] 04 刷题
+    - [ ] 01 方法1：常规法
+    - [x] 02 方法2：拍平法
+
 - [x] 04 T4 2’  [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\04 单选4 2‘ 邻接多重表 顶点的度) 
   - [x] 考察：邻接多重表 顶点的度
     - [x] 01 邻接多重表 边结点结构
@@ -43,6 +50,7 @@
     - [x] 03 总结
 
     - [x] 04 易错点
+
 - [x] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\05 单选5 2‘ 折半查找) 
 
   - [x] 考察：折半查找 
@@ -53,6 +61,7 @@
     - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
     - [x] 06 题目
     - [x] 07 折半查找 代码
+
 - [x] 06 T6 2'  [06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离) 
   - [x] 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
     - [x] 01 看视频
@@ -67,6 +76,7 @@
       - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
       - [x] 03 右滑距离
     - [x] 03 做题
+
 - [x] 07 T7 2’  [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\07 单选7 2’ 二叉搜索树) 
   - [x] 考察：二叉搜索树/二叉排序树
     - [x] 01 二叉搜索树/二叉排序树的概念
@@ -78,6 +88,7 @@
       - [x] 01 方法1：拍平法得到二叉搜索树/二叉排序树按关键宇顺序升序排列的升序序列
       - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
       - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
+
 - [x] 08 T8 2‘  [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\08 单选8 2‘ 快速排序 分块 基本概念) 
   - [x] 考察：快速排序 分块 基本概念
     - [x] 01 知识点
@@ -90,6 +101,7 @@
         - [x]  03 快速排序 一趟排序 例题3
     - [x] 02 刷题
     - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
+
 - [x] 09 T9 2’  [09 单选9 2‘ 堆 删除操作](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\09 单选9 2‘ 堆 删除操作) 
   - [x] 考察：堆的删除操作
 
@@ -102,6 +114,7 @@
       - [x] 03 堆排序
 
     - [x] 02 刷题
+
 - [x] 10 T10 2’  [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\10 单选10 2‘ 归并操作) 
   - [x] 考察：归并操作
     - [x] 01 知识点
@@ -112,6 +125,7 @@
       - [x] 05 归并操作 顺序表(数组)代码
       - [x] 06 归并操作 链表代码
     - [x] 02 刷题
+
 - [x] 11 T11 2‘  [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\11 单选11 2‘ 外部排序 多路归并 败者树) 
   - [x] 考察：外部排序 多路归并 败者树
     - [x] 01 看懂视频
