--- a/01 初试/01 408真题/01 24408/03 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/03 试卷分析.md
@@ -4,7 +4,7 @@
 
 ## 01 数据结构 22’ = 2‘ × 11
 
-- [x] 01 T1 2‘    [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题 28' = 22‘ + 6’\01 数据结构 22’ = 2‘ × 11\01 单选1 2' 一段语句序列对链表的影响) 
+- [x] 01 T1 2‘  [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题 28' = 22‘ + 6’\01 数据结构 22’ = 2‘ × 11\01 单选1 2' 一段语句序列对链表的影响) 
   - [x] 01 时间：250330 D268 S
   - [x] 02 考察：一段语句序列对链表的影响
   - [x] 03 刷题
@@ -28,10 +28,10 @@
     - [x] 01 得到 二叉树 中序遍历序列 的2种方法
       - [x] 01 得到 二叉树 中序遍历序列 的方法1 常规法
       - [x] 02 得到 二叉树 中序遍历序列 的方法2 拍平法
-        - [ ] 01 拍平法 应用1 拍平法 在二叉排序树中 的应用
+        - [x] 01 拍平法 应用1 拍平法 在二叉排序树中 的应用
         - [x] 02 拍平法 应用2 拍平法 在B树中 的应用
-  - [ ] 04 刷题
-    - [ ] 01 方法1：常规法
+  - [x] 04 刷题
+    - [x] 01 方法1：常规法
     - [x] 02 方法2：拍平法
 
 - [x] 04 T4 2’  [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\04 单选4 2‘ 邻接多重表 顶点的度) 
