--- a/01 初试/01 408真题/01 24408/03 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/03 试卷分析.md
@@ -35,9 +35,11 @@
     - [x] 02 方法2：拍平法
 
 - [x] 04 T4 2’  [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\04 单选4 2‘ 邻接多重表 顶点的度) 
-  - [x] 考察：邻接多重表 顶点的度
+  - [x] 01 时间：250401 D266 T
+  - [x] 02 考察：邻接多重表 顶点的度
+  - [x] 03 知识点：
     - [x] 01 邻接多重表 边结点结构
-
+  
     - [x] 02 求邻接多重表 顶点的度 的3种方法
       - [x] 01 求邻接多重表 顶点的度 方法1：通过将邻接多重表转换成无向图求邻接多重表顶点的度
         - [x] 01 邻接多重表 → 无向图
@@ -50,7 +52,7 @@
     - [x] 03 总结
 
     - [x] 04 易错点
-
+  
 - [x] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\05 单选5 2‘ 折半查找) 
 
   - [x] 考察：折半查找 
