--- a/01 初试/01 408真题/01 24408/03 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/03 试卷分析.md
@@ -53,9 +53,11 @@
 
     - [x] 04 易错点
   
+  - [x] 04 刷题
+  
 - [x] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\05 单选5 2‘ 折半查找) 
-
-  - [x] 考察：折半查找 
+  - [x] 01 时间：250405 D262 S
+  - [x] 02 考察：折半查找 
     - [x] 01 折半查找 2个概念：随机访问 顺序访问 
     - [x] 02 折半查找 逻辑
     - [x] 03 折半查找 需要完成的 2个功能
@@ -63,9 +65,11 @@
     - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
     - [x] 06 题目
     - [x] 07 折半查找 代码
+  - [x] 03 刷题
 
 - [x] 06 T6 2'  [06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离) 
-  - [x] 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
+  - [x] 01 时间：250405 D262 S
+  - [x] 02 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
     - [x] 01 看视频
       - [x] 01 看懂视频：串的定义和基本操作
       - [x] 02 看懂视频：串 存储结构
@@ -77,19 +81,20 @@
       - [x] 01 修正后的KMP算法
       - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
       - [x] 03 右滑距离
-    - [x] 03 做题
+  - [x] 03 刷题
 
 - [x] 07 T7 2’  [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\07 单选7 2’ 二叉搜索树) 
-  - [x] 考察：二叉搜索树/二叉排序树
+  - [ ] 01 时间：250405 D262 S
+  - [x] 02 考察：二叉搜索树/二叉排序树
     - [x] 01 二叉搜索树/二叉排序树的概念
     - [x] 02 得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列的2种方法
       - [x] 01 拍平法得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列
       - [x] 02  常规法得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列
     - [x] 03 易错点
-    - [x] 04 刷题
-      - [x] 01 方法1：拍平法得到二叉搜索树/二叉排序树按关键宇顺序升序排列的升序序列
-      - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
-      - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
+  - [x] 03 刷题
+    - [x] 01 方法1：拍平法得到二叉搜索树/二叉排序树按关键宇顺序升序排列的升序序列
+    - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
+    - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
 
 - [x] 08 T8 2‘  [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\08 单选8 2‘ 快速排序 分块 基本概念) 
   - [x] 考察：快速排序 分块 基本概念
