--- a/01 初试/01 408真题/01 24408/03 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/03 试卷分析.md
@@ -84,7 +84,7 @@
   - [x] 03 刷题
 
 - [x] 07 T7 2’  [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\07 单选7 2’ 二叉搜索树) 
-  - [ ] 01 时间：250405 D262 S
+  - [x] 01 时间：250405 D262 S
   - [x] 02 考察：二叉搜索树/二叉排序树
     - [x] 01 二叉搜索树/二叉排序树的概念
     - [x] 02 得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列的2种方法
@@ -97,52 +97,52 @@
     - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
 
 - [x] 08 T8 2‘  [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\08 单选8 2‘ 快速排序 分块 基本概念) 
-  - [x] 考察：快速排序 分块 基本概念
-    - [x] 01 知识点
-      - [x] 01 排序 基本概念
-      - [x] 02 分块 基本概念
-      - [x] 03 拓展
-      - [x] 04 快速排序 一趟排序 例题
-        - [x]  01 快速排序 一趟排序 例题1
-        - [x]  02 快速排序 一趟排序 例题2
-        - [x]  03 快速排序 一趟排序 例题3
-    - [x] 02 刷题
-    - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
+  - [x] 01 时间：250405 D262 S
+  - [x] 02 考察：快速排序 分块 基本概念
+    - [x] 01 排序 基本概念
+    - [x] 02 分块 基本概念
+    - [x] 03 拓展
+    - [x] 04 快速排序 一趟排序 例题
+      - [x]  01 快速排序 一趟排序 例题1
+      - [x]  02 快速排序 一趟排序 例题2
+      - [x]  03 快速排序 一趟排序 例题3
+  - [x] 03 刷题
+  - [x] 04 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
 
 - [x] 09 T9 2’  [09 单选9 2‘ 堆 删除操作](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\09 单选9 2‘ 堆 删除操作) 
-  - [x] 考察：堆的删除操作
+  - [x] 01 时间：250411 D256 F
+  - [x] 02 考察：堆的删除操作
 
-    - [x] 01 知识点
+    - [x] 01 堆的删除操作
 
-      - [x] 01 堆的删除操作
+    - [x] 02 大(小)根堆中调整元素x
 
-      - [x] 02 大(小)根堆中调整元素x
-
-      - [x] 03 堆排序
-
-    - [x] 02 刷题
+    - [x] 03 堆排序
+  - [x] 03 刷题
 
 - [x] 10 T10 2’  [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\10 单选10 2‘ 归并操作) 
-  - [x] 考察：归并操作
-    - [x] 01 知识点
-      - [x] 01 归并两个升(降)序序列a、 b
-      - [x] 02 归并操作 最好情况
-      - [x] 03 归并操作 最坏情况
-      - [x] 04 归并的条件
-      - [x] 05 归并操作 顺序表(数组)代码
-      - [x] 06 归并操作 链表代码
-    - [x] 02 刷题
+  - [x] 01 时间：250411 D256 F
+  - [x] 02 考察：归并操作
+    - [x] 01 归并两个升(降)序序列a、 b
+    - [x] 02 归并操作 最好情况
+    - [x] 03 归并操作 最坏情况
+    - [x] 04 归并的条件
+    - [x] 05 归并操作 顺序表(数组)代码
+    - [x] 06 归并操作 链表代码
+  - [x] 03 刷题
 
 - [x] 11 T11 2‘  [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题 80' = 22‘ + 4’\01 数据结构 22’ = 2‘ × 11\11 单选11 2‘ 外部排序 多路归并 败者树) 
-  - [x] 考察：外部排序 多路归并 败者树
+  - [x] 01 时间：250412 D255 S
+  - [x] 02 考察：外部排序 多路归并 败者树
     - [x] 01 看懂视频
       - [x] 01 2025年数据结构考点讲解/第八章排序/外部排序
       - [x] 02 2025年数据结构考点讲解/第八章排序/败者树
-    - [x] 01 知识点
+    - [x] 02 知识点
       - [x] 01 归并多个升（降）序序列
       - [x] 02 外部排序
       - [x] 03 升序序列的败者树
-    - [x] 02 刷题
+  - [x] 03 刷题
+
 
 
 
